# utopia-terminal

./: .gitignore  CMakeLists.txt  LICENSE  README.md  main.cpp  main.qml  qml.qrc  qtquickcontrols2.conf
api/: api.cpp  api.h
api/crp/: balance.cpp  balance.h  crp.cpp  crp.h  currency.cpp  currency.h  history.cpp  history.h  order.cpp  order.h  panel.cpp  panel.h  trade.cpp  trade.h  user.cpp  user.h
api/dom/: balance.h  book.h  order.cpp  order.h  trade_item.cpp  trade_item.h
api/net/: net.cpp  net.h  socket.cpp  socket.h  sslsocket.cpp  sslsocket.h
mdi/: Icon.js
qml/: CustomRoundButton.qml  IconButton.qml  TradeHistoryLine.qml  TradeHistoryList.qml
qml/book/: BookData.qml  BookHeaderLine.qml  BookLine.qml  BookList.qml  HeaderLabel.qml  HeaderLine.qml
qml/header/: AmountSlider.qml  BotContainer.qml  BuySellButtonLine.qml  CustomTextInput.qml  HeaderOrdersRow.qml  HeaderTradeRow.qml  InputLine.qml  MainHeader.qml  MainMenu.qml  MainToolBarRow.qml  SignInItem.qml  TradeContainer.qml
qml/order/: OrderData.qml  OrderLine.qml  OrderList.qml  OrderOptionsColumn.qml  OrderPartRow.qml  Orders.qml  _OrderLine.qml
qtqml/: qqmlobjectlistmodel.h
